# clipmon

./: .build.yml  Cargo.toml  LICENCE  Makefile  README.md  clipmon.service  notes
src/: main.rs  pipe.rs
