[package]
name = "clipmon"
version = "0.1.0"
authors = ["Hugo Osvaldo Barrera <hugo@whynothugo.nl>"]
edition = "2018"
readme = "README.md"
homepage = "https://sr.ht/~whynothugo/clipmon/"
license = "ISC"

[dependencies]
wayland-client = "0.29.0"
wayland-protocols = { version= "0.29.0", features= ["client", "unstable_protocols"]} 
calloop = "0.9.1"
smithay-client-toolkit = "0.15.1"
libc = "0.2.106"
mime = "0.3.16"
